--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,5 +75,8 @@
         "random": "cpp",
         "utility": "cpp"
     },
-    "rust-analyzer.showUnlinkedFileNotification": false
+    "rust-analyzer.showUnlinkedFileNotification": false,
+    "rust-analyzer.cargo.features": [
+        "serde"
+    ]
 }
