Changing dyn SimulationCell in Context to static implementation (#8)
* Force inlining for Cell methods

* Static cell for context

* Fixed context if chemfiles are not active

* Fixed clippy warning

---------

Co-authored-by: ladme <x461001@fi.muni.cz>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,8 @@
     },
     "rust-analyzer.showUnlinkedFileNotification": false,
     "rust-analyzer.cargo.features": [
+    
         "serde"
-    ]
+    ],
+    "rust-analyzer.cargo.noDefaultFeatures": false
 }
