--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde = { version = "1.0", features = ["derive"] }
 semver = { version = "1.0", features = ["serde"] }
 pretty_env_logger = "0.5"
 log = "0.4"
+env_logger = "0.9"
 average = "0.15"
 iter_num_tools = "0.7"
 indicatif = {version = "*", features = ["rayon"]}
