--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,4 +40,5 @@ num-traits = "0.2"
 rand = "0.8"
 get-size = {version = "0.1", features = ["derive"]}
 physical_constants = "0.5"
+serde_json = "1.0.137"
 
