--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,6 @@ get-size = {version = "0.1", features = ["derive"]}
 physical_constants = "0.5"
 serde_json = "1.0.137"
 
+[dev-dependencies]
+lazy_static = "1.5.0"
+
