Add 5D table stream

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,7 @@ serde_json = "1.0.137"
 [dev-dependencies]
 lazy_static = "1.5"
 
+[profile.release]
+strip = true     # Automatically strip symbols from the binary.
+lto = true       # Link-time optimization
+
