--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,5 +87,6 @@
         "utility": "cpp"
     },
     "rust-analyzer.showUnlinkedFileNotification": false,
-    "rust-analyzer.cargo.noDefaultFeatures": false
+    "rust-analyzer.cargo.noDefaultFeatures": false,
+    "rust-analyzer.checkOnSave": true
 }
