Duello use ionion polar

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,32 +14,32 @@ keywords = ["pairwise_interaction", "bioinformatics", "virial_coefficient", "dis
 [dependencies]
 anyhow = "1.0"
 approx = "0.5"
-clap = { version = "4", features = ["derive"] }
-itertools = "0.14"
-itertools-num = "0.1"
-nalgebra = "0.33"
+clap = { version = "4", features = ["derive"], default-features = false }
+itertools = {version = "0.14"}
+itertools-num = {version = "0.1", default-features = false}
+nalgebra = {version = "0.33", default-features = false}
 rayon = "1.10"
 faunus = { git = "https://github.com/mlund/faunus-rs.git" }
 interatomic = { git = "https://github.com/mlund/interatomic.git", version = "0.3", features = ["serde"] }
 coulomb = { git = "https://github.com/mlund/coulomb.git", version = "0.2.1", features = ["serde"] }
 serde_yaml = "0.9"
-serde = { version = "1.0", features = ["derive"] }
-semver = { version = "1.0", features = ["serde"] }
-pretty_env_logger = "0.5"
+serde = { version = "1.0", features = ["derive"], default-features = false }
+semver = { version = "1.0", features = ["serde"], default-features = false }
+pretty_env_logger = {version = "0.5", default-features = false}
 log = "0.4"
 average = "0.16"
 iter_num_tools = "0.7"
-indicatif = {version = "*", features = ["rayon"]}
-flate2 = "1.0"
+indicatif = {version = "*", features = ["rayon"], default-features = false }
+flate2 = {version = "1.0", default-features = false}
 textplots = "0.8"
 rgb = "0.8"
 nu-ansi-term = "0.50"
 hexasphere = {version = "15.1", features = ["adjacency"]}
 num-traits = "0.2"
-rand = "0.8"
-get-size = {version = "0.1", features = ["derive"]}
+rand = {version = "0.8", default-features = false}
+get-size = {version = "0.1", features = ["derive"], default-features = false}
 physical_constants = "0.5"
-serde_json = "1.0.137"
+serde_json = {version = "1.0.137", default-features = false}
 
 [dev-dependencies]
 lazy_static = "1.5"
