Vertex weight test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ get-size = {version = "0.1", features = ["derive"], default-features = false}
 physical_constants = "0.5"
 serde_json = {version = "1.0.137", default-features = false}
 xdrfile = "0.3.0"
+glam = "0.29.3"
 
 [dev-dependencies]
 lazy_static = "1.5"
