Add tension to structure and contact calculator

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,5 +96,7 @@
         "other": true,
         "comments": false,
         "strings": true
-    }
+    },
+    "python-envs.defaultEnvManager": "ms-python.python:conda",
+    "python-envs.pythonProjects": []
 }
