--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,9 @@ physical_constants = "0.5"
 serde_json = {version = "1.0.137", default-features = false}
 xdrfile = "0.3.0"
 glam = "0.30.10"
+wgpu = "23"
+pollster = "0.4"
+bytemuck = { version = "1.21", features = ["derive"] }
 
 [dev-dependencies]
 lazy_static = "1.5"
