--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ itertools-num = {version = "0.1", default-features = false}
 nalgebra = {version = "0.34.1", default-features = false}
 rayon = "1.10"
 faunus = { git = "https://github.com/mlund/faunus-rs.git" }
-interatomic = { git = "https://github.com/mlund/interatomic.git", features = ["serde"] }
+interatomic = { path = "../interatomic", features = ["serde"] }
 coulomb = { git = "https://github.com/mlund/coulomb.git", version = "0.2.1", features = ["serde"] }
 serde_yaml = "0.9.34-deprecated"
 serde = { version = "1.0", features = ["derive"], default-features = false }
@@ -53,4 +53,8 @@ lazy_static = "1.5"
 [profile.release]
 strip = true     # Automatically strip symbols from the binary.
 lto = true       # Link-time optimization
+
+# Patch interatomic for all dependencies to use local version
+[patch."https://github.com/mlund/interatomic.git"]
+interatomic = { path = "../interatomic" }
 
