--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ compatibility = "manylinux2014"
 
 [project]
 name = "duello"
-version = "0.1.6"
+version = "0.2.1"
+readme = "README.md"
 dependencies = [
     "pdb2xyz>=0.1.2",
 ]
